[cypher] monster block fix for new dark mode css

--- a/block-system-2.0/cypher/character-sheet/cypher.css
+++ b/block-system-2.0/cypher/character-sheet/cypher.css
@@ -1,105 +1,1 @@
-.cypher-sheet,  a,  body,  .descriptor,  .type,  .focus,  small,  strong,  h1,  h2,  h3,  h4,  h5, .card, .card-body, .card-header, table {
-    font-family: Teko Regular;
-    font-weight: 400;
-    font-size: 20px}
- .black { color: black;}
- .bgimage {
-    background-repeat: repeat;
-    background-attachment: fixed;
-    box-shadow: inset 0 0 0 2000px #ffffffd0;
-    background: url(https://www.worldanvil.com/i/4787026/render)}
- .logocontainer {
-    height: 175px;}
- .logo {
-    background: url(https://www.worldanvil.com/i/972194/render) center center no-repeat;
-    background-size: contain;
-    height: 150px;}
- .header,  .header th {
-    font-size: 20px;
-    background-color: var(--gray) ;
-    color: var(--white)}
- .padding-left {
-    padding-left: 16px}
- textarea .form-control,  .list-group {
-    width: 100% !important}
- .form-control {
-    height: 2.05em !important}
- .list-group-item {
-    text-align: left;
-    border-radius: 0px;
-    border-color: var(--gray-dark)}
- .line-spacer {
-    padding: none !important;
-    margin: none !important}
- .form-control,  .control-label {
-    padding: 2px 2px 2px 2px;
-    margin: 1px 10px 0px 10px;
-    display: inline}
- .btn { background: none; border:none; color: var(--lightest-gray) !important }
- .card {
-    margin: 2px;
-    border: 1px solid var(--gray-dark) !important;
-    border-radius: .25rem !important;}
- .card .col {
-    margin: 0px 10px;
-   }
- .table-striped th,  .table-striped td {
-    padding-left: 10px;
-    padding-right: 10px}
- th { font-weight: 400 !important}
- .card-header {
-    padding: 0px;
-    padding-left: 0.10em}
- .card-body,  .collapse {
-    padding: 5px !important;
-    width: 100%}
- .label-roller {
-    position: relative;
-    top: -3px}
- input[type=number],  .input-small {
-    width: 60px !important}
- input {
-    margin: 3px !important}
- small {
-    padding: 5px;
-    line-height: 1.8em;}
- .skill,  .cypher,  .ability {
-    margin-right: 20px !important}
- .botrow {
-    border-bottom: 2px solid #b0b0b0;
-    margin-bottom: 7px}
- .bg-simple {
-    background-color: #e0e0e0 !important;
-    color: #222}
- .bg-dark {
-    background-color: #d0d0d0 !important;
-    color: #222}
- .copyright,  .copyright a {
-    color: #888;
-    font-size: 12px;}
- h3 {
-    font-size: 30px}
- .table-striped {
-    border: 1px solid #ccc}
- .c { text-align: center !important }
- .form-control,  .form-control:focus {
-    font-size: 18px !important}
- input.form-control {
-    max-width: 450px; border: 1px solid var(white) !important; border: 1px solid var(--gray) !important }
- select.form-control {
-    width: auto !important}
- table.cypher {
-    width: 100%;
-    border: 1px solid #00000040;
-    margin-bottom: 6px}
- textarea.form-control-tracker {
-    min-height: 13em !important;
-    width: 100%}
- .od { background-color: #40404030 }
- .ev { background-color: #40404010 }
-.form-control, .form-control-tracker {
-    padding: 2px;
-    background-color: var(--gray) !important;
-    color: var(--white)
-}
-.notes { margin: 10px !important }
+.list-group-item { border: none }
